--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
     "@angular/material": "^13.3.9",
     "@angular/material-moment-adapter": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
@@ -29,6 +30,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
     "json-server": "^0.17.1",
     "moment": "^2.29.4",
     "rxjs": "~7.5.0",
