--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "./node_modules/@ctrl/ngx-emoji-mart/picker.css",
               "src/styles.scss"
             ],
@@ -94,6 +95,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "./node_modules/@ctrl/ngx-emoji-mart/picker.css",
               "src/styles.scss"
             ],
